name:                robin
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://adit.io
license:             BSD3
license-file:        LICENSE
author:              Aditya Bhargava
maintainer:          bluemangroupie@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable robin
  build-depends:       base ==4.6.*
  hs-source-dirs:      src
  main-is: Main.hs

executable robin-spec
  build-depends:       base ==4.6.*, hspec, robin
  hs-source-dirs:      spec, src
  main-is:             Main.hs

library
  build-depends:       base ==4.6.*
  exposed-modules:     Robin
  hs-source-dirs:      src
